fix: remove gap between F and scrollbar

--- a/assets/css/extended/list.css
+++ b/assets/css/extended/list.css
@@ -44,7 +44,7 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
     .entry-photo {
         width: 40vw;
         min-width: 450px;
@@ -57,7 +57,7 @@
     .entry-photo > * {
         max-height: 400px;
         max-width: max(650px, 40vw);
-        min-width: 400px;
+        min-width: 150px;
         height: 100%;
         width: auto;
     }
