--- a/assets/css/extended/menu.css
+++ b/assets/css/extended/menu.css
@@ -58,7 +58,7 @@ a.active {
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
     .menu {
         align-items: start;
     }
