--- a/assets/css/extended/post.css
+++ b/assets/css/extended/post.css
@@ -8,7 +8,7 @@
 /* @media screen and (max-width: 768px) {
 }
 
-@media screen and (min-width: 768px) and (max-width: 1000px) {
+@media screen and (min-width: 769px) and (max-width: 1000px) {
 }
 @media screen and (min-width: 1000px) and (max-width: 1407px) {
 }
@@ -28,7 +28,7 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
     .post-main {
         flex-direction: row;
         display: flex;
